# forge-gap

./: .env.example  .gitignore  CLAUDE.md  README.md  ablation.py  agent.py  chart.py  check_docs.py  faults.py  glm.py  hallucination_ablation.py  malformed_ablation.py  oracle.py  pilot.py  pyproject.toml  runner.py  scenario.py  scenario_hard.py  stats.py  test_ablation.py  test_chart.py  test_faults.py  test_malformed.py  test_nudge.py  test_oracle.py  test_recover.py  test_runner.py  test_scenario_hard.py  test_stats.py  test_submit_nudge.py  test_validation.py  validation_ablation.py  verify.py  weak_ablation.py
.claude/: session-start.md
.claude/commands/: document-stage.md
.github/workflows/: tests.yml
docs/: DECISIONS.md  LEARNING.md  README.md  ROADMAP.md
docs/figures/: capstone-data.json  gap-closure-data.json  hallucination-gap-data.json  malformed-gap-data.json  validation-data.json  weak-gap-data.json
docs/paper/: forge-gap-paper.md  forge-gap-presenter-pack.md
docs/project-guide/: 2026-06-29-forge-gap-guide.md  2026-07-06-forge-gap-guide.md
docs/session-logs/: 2026-06-26-fgap-s2-scenario-oracle.md  2026-06-30-fgap-s8-submit-nudge.md
